<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB8C00">

    <TextView
        android:id="@+id/txt_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/eres_socio_del_club"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:layout_width="403dp"
        android:layout_height="104dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/si_descuento_10_total"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_sin_descuento"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_zonas"
        android:layout_width="191dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:text="@string/zona_general"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="250dp" />

    <TextView
        android:id="@+id/txt_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cantidad"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_zonas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_zonas"
        app:layout_constraintTop_toBottomOf="@+id/txt_zonas" />

    <TextView
        android:id="@+id/txt_totalPaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/total_a_pagar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_descuentoSocio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_descuentoSocio"
        app:layout_constraintTop_toBottomOf="@+id/txt_descuentoSocio" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_cantidad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_cantidad"
        app:layout_constraintTop_toBottomOf="@+id/txt_cantidad" />

    <TextView
        android:id="@+id/txt_descuentoSocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/descuento_socio"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_total"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_total"
        app:layout_constraintTop_toBottomOf="@+id/txt_total" />

    <TextView
        android:id="@+id/txt_nzona"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginEnd="44dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_zonas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toEndOf="@+id/txt_zonas" />

    <TextView
        android:id="@+id/txt_ncantidad"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_cantidad"
        app:layout_constraintEnd_toEndOf="@+id/txt_nzona"
        app:layout_constraintStart_toStartOf="@+id/txt_nzona" />

    <TextView
        android:id="@+id/txt_ntotal"
        android:layout_width="86dp"
        android:layout_height="36dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_total"
        app:layout_constraintEnd_toEndOf="@+id/txt_ncantidad"
        app:layout_constraintStart_toStartOf="@+id/txt_ncantidad" />

    <TextView
        android:id="@+id/txt_ndescuento"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_descuentoSocio"
        app:layout_constraintEnd_toEndOf="@+id/txt_ntotal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_ntotal" />

    <TextView
        android:id="@+id/txt_ntotalPagar"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_totalPaga"
        app:layout_constraintEnd_toEndOf="@+id/txt_ndescuento"
        app:layout_constraintStart_toStartOf="@+id/txt_ndescuento" />

</androidx.constraintlayout.widget.ConstraintLayout>